Updated page PartDesign Workbench/cs

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -33,11 +33,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<div class="mw-translate-fuzzy">
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Revolve3_cropped.png&amp;filetimestamp=20111021160508&amp;.html" class="mw-file-description"><img src="../File/Revolve3_cropped.png" decoding="async" width="653" height="356" class="mw-file-element" data-file-width="653" data-file-height="356"></a></span>
-</p>
-</div>
-<p>The PartDesign Workbench uses a feature based methodology. A component is represented by the Body object container. The Body defines a local coordinate system and contains the cumulative features that define the component. Most features are based on parametric sketches and are either additive or subtractive. For example, the <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad tool</a> adds the extruded sketch to the developing solid, the <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket tool</a> subtracts the extruded sketch. Each feature is cumulative and builds on the result of preceding features. It is also possible to use primitives (<a href="../PartDesign_AdditiveCylinder.html" title="PartDesign AdditiveCylinder">Cylinder</a>, <a href="../PartDesign_AdditiveSphere.html" title="PartDesign AdditiveSphere">Sphere</a>, etc.) as well as solids created outside the Body as features.
+<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Pracovn&iacute; plocha PartDesign</b> poskytuje n&aacute;stroje pro modelov&aacute;n&iacute; t&#283;les. Zam&#283;&#345;uje se p&#345;edev&scaron;&iacute;m na vytv&aacute;&#345;en&iacute; mechanick&yacute;ch komponent&#367;, kter&eacute; lze vyrobit a smontovat do hotov&eacute;ho produktu. Nicm&eacute;n&#283; vytvo&#345;en&eacute; pevn&eacute; objekty lze pou&#382;&iacute;t pro jak&eacute;koli jin&eacute; &uacute;&#269;ely, jako je <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a>, <a href="../FEM_Workbench.html" title="FEM Workbench">pracovn&iacute; plocha FEM</a> nebo <a href="../CAM_Workbench.html" title="CAM Workbench">pracovn&iacute; plocha CAM</a>.
+</p><p>The PartDesign Workbench uses a feature based methodology. A component is represented by the Body object container. The Body defines a local coordinate system and contains the cumulative features that define the component. Most features are based on parametric sketches and are either additive or subtractive. For example, the <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad tool</a> adds the extruded sketch to the developing solid, the <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket tool</a> subtracts the extruded sketch. Each feature is cumulative and builds on the result of preceding features. It is also possible to use primitives (<a href="../PartDesign_AdditiveCylinder.html" title="PartDesign AdditiveCylinder">Cylinder</a>, <a href="../PartDesign_AdditiveSphere.html" title="PartDesign AdditiveSphere">Sphere</a>, etc.) as well as solids created outside the Body as features.
 </p><p>See the <a href="../Feature_editing.html" title="Feature editing">feature editing</a> page for a more complete explanation of this process, and then see <a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Creating a simple component with PartDesign</a> to get started with creating solids.
 </p><p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> provides an alternative <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) methodology for building shapes. For a detailed discussion of the Part Workbench versus the PartDesign Workbench see <a href="../Part_and_PartDesign.html" title="Part and PartDesign">Part and Part Design</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_Workbench_Example.jpg&amp;filetimestamp=20241030064210&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Workbench_Example.jpg" decoding="async" width="326" height="256" class="mw-file-element" data-file-width="326" data-file-height="256"></a></span>
@@ -187,13 +184,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118230727
+Cached time: 20260118231400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.188 seconds
-Real time usage: 0.288 seconds
-Preprocessor visited node count: 460/1000000
+CPU time usage: 0.220 seconds
+Real time usage: 0.453 seconds
+Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -203,18 +200,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.950      1 -total
- 31.74%    6.649      1 Template:PartDesign_Tools_navi/cs
- 23.33%    4.887      1 Template:Userdocnavi/cs
- 18.55%    3.886      2 Template:Navigation_menu_2
- 15.26%    3.197      1 Template:TOCright
- 11.15%    2.336      2 Template:Docnav
-  5.11%    1.070      5 Template:VersionPlus
-  5.05%    1.058      1 Template:MenuCommand
-  4.65%    0.975      1 Template:Version
+100.00%   29.991      1 -total
+ 34.33%   10.297      1 Template:PartDesign_Tools_navi/cs
+ 34.31%   10.289      1 Template:Userdocnavi/cs
+ 27.50%    8.248      2 Template:Navigation_menu_2
+ 10.29%    3.085      2 Template:Docnav
+  4.93%    1.478      1 Template:TOCright
+  4.45%    1.334      5 Template:VersionPlus
+  3.97%    1.192      1 Template:MenuCommand
+  3.72%    1.115      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118230726 and revision id 1740835. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118231400 and revision id 1740837. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
