--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -41,7 +41,7 @@
 </p><p><span id="Tools"></span>
 </p>
 <h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
-<p>The Part Design tools are all located in the <b>Part Design</b> menu and the PartDesign toolbars that appear when you load the PartDesign Workbench.
+<p>N&aacute;stroje pro n&aacute;vrh d&iacute;l&#367; se nach&aacute;zej&iacute; v menu <b>Part Design</b> a na panelech n&aacute;stroj&#367; PartDesign, kter&eacute; se zobraz&iacute; po na&#269;ten&iacute; pracovn&iacute;ho prost&#345;ed&iacute; PartDesign.
 </p>
 <h3><span class="mw-headline" id="Part_Design_Helper_Features_toolbar">Part Design Helper Features toolbar</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">New Body</a>: creates a <a href="../Body.html" title="Body">Body</a> object in the active document and makes it active.</li></ul>
@@ -182,12 +182,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118232946
+Cached time: 20260118233036
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.186 seconds
-Real time usage: 0.344 seconds
+CPU time usage: 0.235 seconds
+Real time usage: 0.427 seconds
 Preprocessor visited node count: 461/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -198,18 +198,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.336      1 -total
- 35.00%   11.667      1 Template:PartDesign_Tools_navi/cs
- 26.14%    8.715      1 Template:Userdocnavi/cs
- 16.68%    5.562      2 Template:Navigation_menu_2
- 11.82%    3.941      5 Template:VersionPlus
-  8.74%    2.913      2 Template:Docnav
-  6.30%    2.099      1 Template:Version
-  4.68%    1.559      1 Template:TOCright
-  3.84%    1.280      1 Template:MenuCommand
+100.00%   58.626      1 -total
+ 33.86%   19.851      1 Template:Userdocnavi/cs
+ 28.41%   16.655      1 Template:PartDesign_Tools_navi/cs
+ 25.71%   15.074      2 Template:Navigation_menu_2
+  9.55%    5.601      5 Template:VersionPlus
+  6.91%    4.051      2 Template:Docnav
+  5.38%    3.154      1 Template:Version
+  5.00%    2.933      1 Template:MenuCommand
+  4.23%    2.478      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118232946 and revision id 1740845. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118233036 and revision id 1740847. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
