--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -42,8 +42,9 @@
 </p>
 <h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
 <p>N&aacute;stroje pro n&aacute;vrh d&iacute;l&#367; se nach&aacute;zej&iacute; v menu <b>Part Design</b> a na panelech n&aacute;stroj&#367; PartDesign, kter&eacute; se zobraz&iacute; po na&#269;ten&iacute; pracovn&iacute;ho prost&#345;ed&iacute; PartDesign.
+</p><p><span id="Part_Design_Helper_Features_toolbar"></span>
 </p>
-<h3><span class="mw-headline" id="Part_Design_Helper_Features_toolbar">Part Design Helper Features toolbar</span></h3>
+<h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_pomocn.C3.ADka_pro_navrhov.C3.A1n.C3.AD_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_pomocn&iacute;ka_pro_navrhov&aacute;n&iacute;_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; pomocn&iacute;ka pro navrhov&aacute;n&iacute; d&iacute;l&#367;</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">New Body</a>: creates a <a href="../Body.html" title="Body">Body</a> object in the active document and makes it active.</li></ul>
 <ul><li><span id="PartDesign_CompSketches"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> New Sketch:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a>: creates a new sketch on a selected face or plane. If no face is selected while this tool is executed, the user is prompted to select a plane from the Tasks panel. The interface then switches to the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> in sketch editing mode.</li></ul></dd></dl>
@@ -182,13 +183,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118233036
+Cached time: 20260118233124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.235 seconds
-Real time usage: 0.427 seconds
-Preprocessor visited node count: 461/1000000
+CPU time usage: 0.225 seconds
+Real time usage: 0.388 seconds
+Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -198,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.626      1 -total
- 33.86%   19.851      1 Template:Userdocnavi/cs
- 28.41%   16.655      1 Template:PartDesign_Tools_navi/cs
- 25.71%   15.074      2 Template:Navigation_menu_2
-  9.55%    5.601      5 Template:VersionPlus
-  6.91%    4.051      2 Template:Docnav
-  5.38%    3.154      1 Template:Version
-  5.00%    2.933      1 Template:MenuCommand
-  4.23%    2.478      1 Template:TOCright
+100.00%   29.714      1 -total
+ 29.64%    8.807      1 Template:Userdocnavi/cs
+ 21.55%    6.404      1 Template:PartDesign_Tools_navi/cs
+ 16.65%    4.947      2 Template:Navigation_menu_2
+ 12.67%    3.766      1 Template:TOCright
+  9.96%    2.959      2 Template:Docnav
+  9.81%    2.915      1 Template:MenuCommand
+  6.62%    1.967      5 Template:VersionPlus
+  5.79%    1.720      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118233036 and revision id 1740847. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118233124 and revision id 1740849. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
