--- a/wiki/de/PartDesign_AdditiveLoft.html
+++ b/wiki/de/PartDesign_AdditiveLoft.html
@@ -109,7 +109,7 @@
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
 <ul><li>Um die Form der Ausformung besser kontrollieren zu k&ouml;nnen, wird empfohlen, dass alle Querschnitte die gleiche Anzahl von Segmenten haben. Zum Beispiel kann f&uuml;r eine Ausformung zwischen einem Rechteck und einem Kreis der Kreis in vier zusammenh&auml;ngende B&ouml;gen aufgeteilt werden.</li>
-<li>Die Ausformung kann mit einem einzelnen Knotenpunkt (<a href="../de/Glossary.html#V" title="Glossary/de">vertex</a>), einer Skizze oder einem K&ouml;rper beginnen oder enden.</li>
+<li>Die Ausformung kann mit einem einzelnen Knotenpunkt (<a href="../de/Glossary.html#V" title="Glossary/de">vertex</a>) einer Skizze oder eines K&ouml;rpers beginnen oder enden.</li>
 <li>Ein Knotenpunkt kann nur entweder Start- oder Endpunkt einer Ausformung sein. Andernfalls w&uuml;rde der Ausformungsk&ouml;rper aus zwei an der spitze verbundenen Festk&ouml;rpern bestehen. Dies w&uuml;rde gegen die Definition eines 3D-Objekts des CAD-Kernels versto&szlig;en.</li>
 <li>Ein Querschnitt kann nicht auf derselben Ebene liegen wie der unmittelbar vorhergehende.</li>
 <li>Wenn die Skizze eine innere Geometrie hat, dann sollte die Reihenfolge, in der die Skizzengeometrie erstellt wird, f&uuml;r alle Schnitte gleich sein. Entweder beginnen alle Schnitte mit der inneren Geometrie oder sie beginnen alle mit der &auml;u&szlig;eren. Andernfalls kann eine ung&uuml;ltige Ausformung erzeugt werden, bei dem sich Innen- und Au&szlig;enw&auml;nde kreuzen.</li>
@@ -166,12 +166,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117162357
+Cached time: 20260118233632
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.215 seconds
 Preprocessor visited node count: 557/1000000
 Post&#8208;expand include size: 22857/2097152 bytes
 Template argument size: 7375/2097152 bytes
@@ -182,19 +182,19 @@ Unstrip post&#8208;expand size: 2181/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.392      1 -total
- 17.82%    5.058      7 Template:PropertyData/de
- 16.62%    4.719      1 Template:PartDesign_Tools_navi/de
- 13.57%    3.854     10 Template:Variable
- 10.89%    3.092      1 Template:Userdocnavi/de
-  9.67%    2.746      2 Template:Navigation_menu_2
-  8.95%    2.541      3 Template:PropertyData
-  8.83%    2.506      2 Template:Docnav/de
-  8.71%    2.473      1 Template:GuiCommand/de
-  7.70%    2.187      6 Template:Button
+100.00%   36.213      1 -total
+ 19.27%    6.979      7 Template:PropertyData/de
+ 16.59%    6.006      1 Template:Userdocnavi/de
+ 14.56%    5.273      1 Template:PartDesign_Tools_navi/de
+ 11.62%    4.206     10 Template:Variable
+  9.91%    3.589      1 Template:GuiCommand/de
+  8.84%    3.200      2 Template:Docnav/de
+  8.31%    3.008      1 Template:Version/de
+  8.19%    2.965      3 Template:PropertyData
+  5.71%    2.069      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20260117162356 and revision id 1739616. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20260118233632 and revision id 1740851. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
