--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -14,7 +14,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Hilfskreis um 1 Punkt
+<td class="ctEven">TechDraw &rarr; Mittellinien/Gewinde &rarr; Hilfskreis um 1 Punkt
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -148,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118192858
+Cached time: 20260118235012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.546 seconds
-Preprocessor visited node count: 362/1000000
-Post&#8208;expand include size: 29237/2097152 bytes
-Template argument size: 11372/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 361/1000000
+Post&#8208;expand include size: 29241/2097152 bytes
+Template argument size: 11376/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +162,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  106.460      1 -total
- 26.03%   27.714      1 Template:TechDraw_Tools_navi/de
- 16.04%   17.074      2 Template:Navigation_menu_2
- 14.74%   15.689      1 Template:Userdocnavi/de
- 11.27%   12.002      1 Template:GuiCommand/de
-  9.42%   10.033      1 Template:KEY
-  7.64%    8.132      1 Template:Version/de
-  7.09%    7.551      1 Template:Incode
-  6.95%    7.399      2 Template:MenuCommand
-  6.05%    6.438      2 Template:Docnav/de
+100.00%   30.234      1 -total
+ 20.37%    6.160      1 Template:TechDraw_Tools_navi/de
+ 14.92%    4.511      1 Template:Version/de
+ 11.88%    3.593      1 Template:GuiCommand/de
+ 11.25%    3.401      2 Template:Navigation_menu_2
+ 10.07%    3.045      2 Template:Docnav/de
+  8.48%    2.564      1 Template:KEY
+  7.19%    2.174      1 Template:Caption
+  6.98%    2.111      1 Template:Userdocnavi/de
+  6.39%    1.932      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118192857 and revision id 1740746. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118235012 and revision id 1740855. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
