--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -63,17 +63,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Einen Punkt in einer TechDraw-Ansicht oder in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> ausw&auml;hlen.</li>
 <li>Wurde ein Punkt in der 3D-Ansicht ausgew&auml;hlt: Die korrekte TechDraw-Ansicht zur Auswahl hinzuf&uuml;gen, indem sie in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ausgew&auml;hlt wird.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, den Befehl aufzurufen:
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hilfskreis um 1 Punkt</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis um 1 Punkt</b> ausw&auml;hlen.</li></ul></li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Mittellinien/Gewinde &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis um 1 Punkt</b> ausw&auml;hlen.</li></ul></li>
 <li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Wahlweise die Koordinaten des Mittelpunktes, den Radius sowie Start- und Endwinkel des Kreises anpassen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li>
 <li>Ein Hilfskreis wird hinzugef&uuml;gt. Im Falle eines 3D-Mittelpunktes befindet sich der Kreis an der Stelle der Projektion dieses Punktes.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -146,15 +144,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118235012
+Cached time: 20260118235136
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.180 seconds
-Preprocessor visited node count: 361/1000000
-Post&#8208;expand include size: 29241/2097152 bytes
-Template argument size: 11376/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.177 seconds
+Preprocessor visited node count: 360/1000000
+Post&#8208;expand include size: 29243/2097152 bytes
+Template argument size: 11378/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -162,19 +160,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.234      1 -total
- 20.37%    6.160      1 Template:TechDraw_Tools_navi/de
- 14.92%    4.511      1 Template:Version/de
- 11.88%    3.593      1 Template:GuiCommand/de
- 11.25%    3.401      2 Template:Navigation_menu_2
- 10.07%    3.045      2 Template:Docnav/de
-  8.48%    2.564      1 Template:KEY
-  7.19%    2.174      1 Template:Caption
-  6.98%    2.111      1 Template:Userdocnavi/de
-  6.39%    1.932      1 Template:Incode
+100.00%   41.043      1 -total
+ 26.14%   10.729      1 Template:TechDraw_Tools_navi/de
+ 14.71%    6.037      2 Template:Navigation_menu_2
+ 14.07%    5.776      1 Template:GuiCommand/de
+ 10.69%    4.389      2 Template:Docnav/de
+ 10.69%    4.388      1 Template:Version/de
+  6.85%    2.812      1 Template:Userdocnavi/de
+  5.90%    2.422      1 Template:Caption
+  5.75%    2.361      1 Template:KEY
+  5.48%    2.251      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118235012 and revision id 1740855. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118235136 and revision id 1740857. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
