--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticCircle/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cercle cosm&eacute;tique par 1 point (84% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -77,15 +77,13 @@
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
 <p>Zum &Auml;ndern der Attribute eines Hilfskreises:
 </p>
-<div class="mw-translate-fuzzy">
 <ol><li>Den Hilfskreis ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, den Befehl aufzurufen:
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hilfskreis um 1 Punkt</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis um 1 Punkt</b> ausw&auml;hlen.</li></ul></li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Mittellinien/Gewinde &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis um 1 Punkt</b> ausw&auml;hlen.</li></ul></li>
 <li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Die Koordinaten des Mittelpunktes, den Radius sowie Start- und Endwinkel des Kreises anpassen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -144,35 +142,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118235136
+Cached time: 20260118235153
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.177 seconds
-Preprocessor visited node count: 360/1000000
-Post&#8208;expand include size: 29243/2097152 bytes
-Template argument size: 11378/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.122 seconds
+Preprocessor visited node count: 359/1000000
+Post&#8208;expand include size: 29245/2097152 bytes
+Template argument size: 11380/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1661/5000000 bytes
+Unstrip post&#8208;expand size: 1665/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.043      1 -total
- 26.14%   10.729      1 Template:TechDraw_Tools_navi/de
- 14.71%    6.037      2 Template:Navigation_menu_2
- 14.07%    5.776      1 Template:GuiCommand/de
- 10.69%    4.389      2 Template:Docnav/de
- 10.69%    4.388      1 Template:Version/de
-  6.85%    2.812      1 Template:Userdocnavi/de
-  5.90%    2.422      1 Template:Caption
-  5.75%    2.361      1 Template:KEY
-  5.48%    2.251      4 Template:Button
+100.00%   26.607      1 -total
+ 24.97%    6.645      1 Template:TechDraw_Tools_navi/de
+ 15.39%    4.095      2 Template:Docnav/de
+ 14.23%    3.787      1 Template:GuiCommand/de
+ 12.02%    3.197      2 Template:Navigation_menu_2
+  9.60%    2.554      1 Template:Userdocnavi/de
+  8.20%    2.181      1 Template:Version/de
+  5.78%    1.538      1 Template:Caption
+  5.78%    1.538      4 Template:Button
+  4.21%    1.121      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118235136 and revision id 1740857. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260118235153 and revision id 1740859. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
