--- a/wiki/de/Cables_ElectricalDevice.html
+++ b/wiki/de/Cables_ElectricalDevice.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables ElectricalDevice/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+ElectricalDevice&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_ElectricalDevice.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables ElectricalDevice (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Dispositif &eacute;lectrique (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
@@ -172,11 +172,10 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Basis</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Eine externe Form eines beliebigen auf einer <a href="../de/Part_Workbench.html" title="Part Workbench/de">Form</a> basierenden Basisobjekts kann hier verwendet werden. Dies ersetzt die Standardmethode zur Formerstellung und es wird eine externe Form eingesetzt. Die Parameter <b>Number Of Terminals</b> und <b>Number Of Supp Lines</b> werden angezeigt und k&ouml;nnen bearbeitet werden, wenn die Eigenschaft Basis nicht leer ist.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Gibt die Anzahl der integrierten <a href="../de/Cables_SuppLines.html" title="Cables SuppLines/de">Anschlusskreuze</a> (SuppLines-Objekte) an. Der Standardwert ist 0.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verlinkten Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Gibt die Anzahl der integrierten <a href="../de/Cables_SuppLines.html" title="Cables SuppLines/de">Anschlusskreuze</a> (SuppLines-Objekte) an. Der Standardwert ist 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Gibt die Anzahl der integrierten <a href="../de/Cables_CableTerminal.html" title="Cables CableTerminal/de">Anschl&uuml;sse</a> (CableTerminal-Objekte) an. Der Standardwert ist 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Gibt den voreingestellten Parametersatz f&uuml;r Betriebsmittel an. Standardeinstellung ist <code>MCB_1-Pole</code>.</li></ul>
-</div>
 <p><span id="Tutorials"></span>
 </p>
 <h2><span class="mw-headline" id="Anleitungen">Anleitungen</span></h2>
@@ -198,35 +197,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118235352
+Cached time: 20260119000121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 689/1000000
-Post&#8208;expand include size: 11834/2097152 bytes
-Template argument size: 3871/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.242 seconds
+Preprocessor visited node count: 729/1000000
+Post&#8208;expand include size: 12298/2097152 bytes
+Template argument size: 3949/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2135/5000000 bytes
+Unstrip post&#8208;expand size: 2139/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.428      1 -total
- 17.83%    4.713      1 Template:GuiCommand/de
- 15.16%    4.005      5 Template:PropertyData/de
- 12.00%    3.172      2 Template:TitleProperty
-  9.76%    2.579      6 Template:Code
-  8.75%    2.312      2 Template:Docnav
-  8.54%    2.257      5 Template:Variable
-  6.39%    1.689      8 Template:Incode
-  5.93%    1.566      2 Template:Value
-  4.81%    1.271      4 Template:KEY
+100.00%  177.220      1 -total
+ 74.83%  132.620      6 Template:Code
+  7.43%   13.170      1 Template:GuiCommand/de
+  4.42%    7.825      6 Template:PropertyData/de
+  3.00%    5.315      4 Template:KEY
+  2.93%    5.198      2 Template:TitleProperty
+  2.23%    3.948      6 Template:Variable
+  1.85%    3.276      2 Template:Docnav
+  1.27%    2.253      9 Template:Incode
+  1.18%    2.090      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:397435-0!canonical and timestamp 20260118235351 and revision id 1740861. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:397435-0!canonical and timestamp 20260119000120 and revision id 1740863. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
