--- a/wiki/de/Cables_ElectricalDevice.html
+++ b/wiki/de/Cables_ElectricalDevice.html
@@ -172,7 +172,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Basis</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Eine externe Form eines beliebigen auf einer <a href="../de/Part_Workbench.html" title="Part Workbench/de">Form</a> basierenden Basisobjekts kann hier verwendet werden. Dies ersetzt die Standardmethode zur Formerstellung und es wird eine externe Form eingesetzt. Die Parameter <b>Number Of Terminals</b> und <b>Number Of Supp Lines</b> werden angezeigt und k&ouml;nnen bearbeitet werden, wenn die Eigenschaft Basis nicht leer ist.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verlinkten Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verkn&uuml;pften Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Gibt die Anzahl der integrierten <a href="../de/Cables_SuppLines.html" title="Cables SuppLines/de">Anschlusskreuze</a> (SuppLines-Objekte) an. Der Standardwert ist 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Gibt die Anzahl der integrierten <a href="../de/Cables_CableTerminal.html" title="Cables CableTerminal/de">Anschl&uuml;sse</a> (CableTerminal-Objekte) an. Der Standardwert ist 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Gibt den voreingestellten Parametersatz f&uuml;r Betriebsmittel an. Standardeinstellung ist <code>MCB_1-Pole</code>.</li></ul>
@@ -197,12 +197,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119000121
+Cached time: 20260119000458
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.242 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 729/1000000
 Post&#8208;expand include size: 12298/2097152 bytes
 Template argument size: 3949/2097152 bytes
@@ -213,19 +213,19 @@ Unstrip post&#8208;expand size: 2139/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  177.220      1 -total
- 74.83%  132.620      6 Template:Code
-  7.43%   13.170      1 Template:GuiCommand/de
-  4.42%    7.825      6 Template:PropertyData/de
-  3.00%    5.315      4 Template:KEY
-  2.93%    5.198      2 Template:TitleProperty
-  2.23%    3.948      6 Template:Variable
-  1.85%    3.276      2 Template:Docnav
-  1.27%    2.253      9 Template:Incode
-  1.18%    2.090      2 Template:Value
+100.00%   55.049      1 -total
+ 16.97%    9.339      2 Template:TitleProperty
+ 13.80%    7.595      6 Template:PropertyData/de
+ 12.10%    6.663      1 Template:GuiCommand/de
+  9.68%    5.326      6 Template:Code
+  7.36%    4.051      6 Template:Variable
+  6.45%    3.550      2 Template:Value
+  6.40%    3.522      1 Template:Caption
+  6.05%    3.331      2 Template:Docnav
+  5.13%    2.823      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:397435-0!canonical and timestamp 20260119000120 and revision id 1740863. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:397435-0!canonical and timestamp 20260119000457 and revision id 1740865. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
