Updated page Cables CableBox/de

--- a/wiki/de/Cables_CableBox.html
+++ b/wiki/de/Cables_CableBox.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableBox/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableBox&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_CableBox.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableBox (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_CableBox.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Bo&icirc;te &agrave; c&acirc;bles (93% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../pl/Cables_CableBox.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Puszka kablowa (2% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -142,7 +142,6 @@
 <h2><span class="mw-headline" id="Typischer_Arbeitsablauf">Typischer Arbeitsablauf</span></h2>
 <p>Dieser Arbeitsablauf zeigt, wie man eine Installationsdose mit einer angeschlossenen Leitung und einem im Inneren der Installationsdose geformten Leiter der Leitung aufbaut.
 </p>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine <b>Installationsdose</b> erstellen, wie unter <a href="#Anwendung">Anwendung</a> beschrieben und ihre Eigenschaft <b>Helper Rings Hidden</b> auf <code>false</code> setzen.</li>
 <li>Eine <b>Leitung</b> erstellen, wie unter <a href="../de/Cables_Cable.html#Anwendung" title="Cables Cable/de">Leitung, Anwendung</a> beschrieben, wobei ein Ende eines Leitungsverlaufs am mittleren Knoten eines <a href="../de/Cables_SuppLines.html" title="Cables SuppLines/de">Anschlusskreuzes</a> der <b>Installationsdose</b> befestigt wird.</li>
 <li>Die Form der <b>Leitung</b> in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ausblenden, z.B. durch Dr&uuml;cken der <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Leertaste</span>. Die Adern sollten weiterhin sichtbar sein.</li>
@@ -154,7 +153,6 @@
 <li>Die Form der <b>Leitung</b> in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> einblenden, z. B. durch Dr&uuml;cken der <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Leertaste</span>.</li>
 <li>Die Form der <b>Installationsdose</b> einblenden, indem die Eigenschaft <b>Box Body Hidden</b> auf <code>false</code> gesetzt wird.</li>
 <li>Die Hilfsringe ausblenden, indem die Eigenschaft <b>Helper Rings Hidden</b> der <b>Installationsdose</b> auf <code>true</code> gesetzt wird.</li></ol>
-</div>
 <p>Hinweis: W&auml;hrend der Bearbeitung von Adern im Modus <a href="../de/Cables_Edit.html" title="Cables Edit/de">Cables Bearbeiten</a> kann  die H&ouml;he oder der Durchmesser des Hilfsrings jederzeit ge&auml;ndert werden. Dies kann beim Erstellen neuer tempor&auml;rer Referenzpunkte hilfreich sein.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Cables_CableBox_Example2_static.png&amp;filetimestamp=20251022164718&amp;.html" class="mw-file-description"><img src="../File/Cables_CableBox_Example2_static.png" decoding="async" width="400" height="300" class="mw-file-element" data-file-width="400" data-file-height="300"></a></span>
 </p>
@@ -171,35 +169,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119001549
+Cached time: 20260119001802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 1466/1000000
-Post&#8208;expand include size: 22782/2097152 bytes
-Template argument size: 5634/2097152 bytes
+CPU time usage: 0.119 seconds
+Real time usage: 0.648 seconds
+Preprocessor visited node count: 1437/1000000
+Post&#8208;expand include size: 22712/2097152 bytes
+Template argument size: 5598/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1355/5000000 bytes
+Unstrip post&#8208;expand size: 1359/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.484      1 -total
- 23.73%   11.742     27 Template:PropertyData/de
- 14.95%    7.400     27 Template:Variable
- 11.10%    5.494      3 Template:TitleProperty
-  9.88%    4.890      1 Template:GuiCommand/de
-  8.99%    4.449     17 Template:Value
-  8.88%    4.396      2 Template:Code
-  7.44%    3.681      2 Template:Docnav/de
-  5.43%    2.686      3 Template:FileName
-  5.04%    2.493     40 Template:Incode
+100.00%  240.620      1 -total
+ 27.82%   66.943     27 Template:PropertyData/de
+ 16.89%   40.644      3 Template:TitleProperty
+ 13.72%   33.008     27 Template:Variable
+ 12.81%   30.831      1 Template:GuiCommand/de
+ 11.54%   27.757      2 Template:Code
+  6.83%   16.442     13 Template:Value
+  5.07%   12.195      4 Template:FALSE
+  4.91%   11.813      2 Template:Docnav/de
+  4.64%   11.174      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260119001549 and revision id 1740873. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260119001801 and revision id 1740875. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
