Updated page Macro FCInfo/de

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -189,7 +189,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_6:_Neigung">Abschnitt 6: Neigung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inclination_00.png&amp;filetimestamp=20221021104232&amp;.html" class="mw-file-description" title="FCInfo Neigung"><img alt="FCInfo Neigung" src="../File/Macro_FCInfo_Inclination_00.png" decoding="async" width="397" height="242" class="mw-file-element" data-file-width="397" data-file-height="242"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Inclination of the object</b> (Neigung des Objekts) kann angezeigt werden in:
 <ul><li>Dezimalgrad, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174.831872611&deg;</span></li>
 <li>Grad Minute Sekunde, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174&deg; 49' 54.741401<i></i></span></li>
@@ -197,16 +196,14 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li>Neugrad, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">194.257636235 gon</span></li>
 <li>Prozent, ex: 30&deg; = <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">57.74%</span></li></ul></li>
 <li><b>Inclinations in planes XY, YZ, ZX</b> (Neigung in den XY-, YZ-, ZX-Ebenen ) und deren Koordinaten</li>
-<li><b>Direction object</b> (Richtungsobjekt), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, -10.0)</span> Die Richtung des Objekts angeben. Die Berechnung lautet: coord_1 - coord_2 = Richtung (oder umgekehrt)
+<li><b>Direction object</b> (Richtungsobjekt), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, -10.0)</span> Gibt die Richtung des Objekts an. Die Berechnung lautet: coord_1 - coord_2 = Richtung (oder umgekehrt)
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Direction</span> (Richtung) Diese Schaltfl&auml;che erstellt eine Linie in Richtung des Objekts.</li></ul></li>
 <li><b>ValueAt(0)</b> (Wert an (0)), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 10.0)</span> Gibt den 3D-Vektor zur&uuml;ck, der einem Parameterwert entspricht.
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">ValueAt(0)</span> Diese Schaltfl&auml;che erstellt eine Linie in Richtung ValueAt des Objekts.</li></ul></li>
 <li><b>NormalAt(0,0)</b> (Normale an (0,0)), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 1.0)</span> Gibt den 3D-Vektor zur&uuml;ck, der einem Parameterwert entspricht.
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">NormalAt(0,0)</span> Diese Schaltfl&auml;che erstellt eine Linie in NormalAt-Richtung des Objekts.</li></ul></li></ul>
 <p><i>(Die Variable <b>switch_setVisible_GBox_006_Inclination</b> kann auf <code>false</code> gesetzt werden, um den Rahmen auszublenden.)</i>
-</p>
-</div>
-<p><span id="Sector_7:_Surface_and_Volume"></span>
+</p><p><span id="Sector_7:_Surface_and_Volume"></span>
 </p>
 <h3><span id="Abschnitt_7:_Oberfl.C3.A4che_und_Volumen"></span><span class="mw-headline" id="Abschnitt_7:_Oberfl&auml;che_und_Volumen">Abschnitt 7: Oberfl&auml;che und Volumen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Surface_and_Volume_00.png&amp;filetimestamp=20221021104109&amp;.html" class="mw-file-description" title="FCInfo Oberfl&auml;che und Volumen"><img alt="FCInfo Oberfl&auml;che und Volumen" src="../File/Macro_FCInfo_Surface_and_Volume_00.png" decoding="async" width="397" height="326" class="mw-file-element" data-file-width="397" data-file-height="326"></a></span>
@@ -736,13 +733,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119003456
+Cached time: 20260119003639
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.182 seconds
-Real time usage: 0.231 seconds
-Preprocessor visited node count: 1548/1000000
+CPU time usage: 0.217 seconds
+Real time usage: 0.672 seconds
+Preprocessor visited node count: 1547/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -752,19 +749,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.507      1 -total
-  7.03%    4.465     10 Template:Code
-  6.95%    4.412     44 Template:LineEdit
-  6.10%    3.874      8 Template:RadioButton
-  5.25%    3.337      1 Template:Macro/de
-  4.69%    2.980      3 Template:Incode
-  4.59%    2.914     10 Template:CheckBox
-  3.77%    2.393      1 Template:Codeextralink
-  3.64%    2.314      5 Template:SpinBox
-  3.35%    2.128     25 Template:Button
+100.00%  429.684      1 -total
+ 66.90%  287.440     10 Template:Code
+  3.48%   14.965      3 Template:Incode
+  1.93%    8.300     44 Template:LineEdit
+  1.86%    7.991     25 Template:Button
+  1.81%    7.785     10 Template:CheckBox
+  1.73%    7.445      5 Template:SpinBox
+  1.34%    5.745     19 Template:True
+  1.26%    5.403      1 Template:CodeDownload
+  1.04%    4.449      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003456 and revision id 1740885. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003638 and revision id 1740887. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
