Updated page Macro FCInfo/de

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -309,16 +309,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_12:_Tabelle">Abschnitt 12: Tabelle</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Disabled_module_00.png&amp;filetimestamp=20221021103851&amp;.html" class="mw-file-description" title="FCInfo ausgeschaltet"><img alt="FCInfo ausgeschaltet" src="../File/Macro_FCInfo_Disabled_module_00.png" decoding="async" width="396" height="118" class="mw-file-element" data-file-width="396" data-file-height="118"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Disabled module<span></span></span> Kontrollk&auml;stchen f&uuml;r die Suche oder nicht alle Details des Objekts. Wenn sie nicht aktiviert ist, wird nur der Hauptwert angezeigt.</li>
 <li>Eckpunkte und Details der Form (compt_Edge), (compt_Faces), (compt_Vector of the Face)</li>
 <li>Maximal 200 Zeilen in der Tabelle, bei mehr als 200 Zeilen erscheint <b>(!+ 200)</b> und die Anzahl der Zeilen</li>
 <li>Wenn das Objekt aus vielen Objekten besteht, dauert die Suche lange und wird bei jedem Mausklick wiederholt. Die Schreibfunktion in der enthaltenen Tabellenkalkulation verringert die Anzeigezeit, daher ist sie standardm&auml;&szlig;ig deaktiviert.</li>
 <li>Alle Details k&ouml;nnen &uuml;ber die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span> (Speichern) in einer Datei im CSV-Format gespeichert und mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Read</span> (Lesen) in einer Tabellenkalkulation oder mit einem externen Tabellenkalkulationsprogramm wie <a rel="nofollow" class="external text" href="https://www.libreoffice.org/">LibreOffice</a> <a rel="nofollow" class="external text" href="http://openoffice.apache.org/downloads.html">OpenOffice</a> oder anderen Programmen angezeigt werden.</li></ul>
-<p><i>(Die Variable <b>switch_setVisible_GBox_012_SpreadSheet</b> kann auf <code>false</code> gesetzt werden, um den Rahmen auszublenden.)</i>
-</p>
-</div>
-<p><span id="Sector_13:_SpreadSheet_creation"></span>
+<p><i>(Die Variable <b>switch_setVisible_GBox_012_SpreadSheet</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
+</p><p><span id="Sector_13:_SpreadSheet_creation"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_13:_Tabellenerstellung">Abschnitt 13: Tabellenerstellung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_SpreedSheet_00.png&amp;filetimestamp=20230901201427&amp;.html" class="mw-file-description" title="FCInfo Tabelle"><img alt="FCInfo Tabelle" src="../File/Macro_FCInfo_SpreedSheet_00.png" decoding="async" width="465" height="159" class="mw-file-element" data-file-width="465" data-file-height="159"></a></span>
@@ -724,13 +721,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119004106
+Cached time: 20260119004133
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.197 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 1544/1000000
+CPU time usage: 0.198 seconds
+Real time usage: 0.335 seconds
+Preprocessor visited node count: 1543/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -740,19 +737,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.007      1 -total
-  7.06%    4.590      1 Template:Macro/de
-  5.66%    3.683     44 Template:LineEdit
-  5.35%    3.478     10 Template:Code
-  5.16%    3.355      1 Template:Codeextralink
-  4.97%    3.233      5 Template:SpinBox
-  4.65%    3.025      8 Template:RadioButton
-  4.45%    2.892     10 Template:CheckBox
-  4.37%    2.843      1 Template:Caption
-  3.23%    2.103      5 Template:Clear
+100.00%   86.380      1 -total
+  7.51%    6.484      1 Template:Macro/de
+  6.18%    5.339      8 Template:RadioButton
+  6.12%    5.289     44 Template:LineEdit
+  5.67%    4.900     10 Template:Code
+  5.26%    4.546      1 Template:Codeextralink
+  4.06%    3.508      3 Template:Incode
+  4.03%    3.483      5 Template:SpinBox
+  3.82%    3.302     10 Template:CheckBox
+  3.57%    3.081      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004106 and revision id 1740893. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004132 and revision id 1740895. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
