Updated page Macro FCInfo/de

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -330,7 +330,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Comma<span></span></span>&nbsp;: Das Trennzeichen ist ein Komma.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Semicolon<span></span></span>&nbsp;: Das Trennzeichen ist das Semikolon.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Space<span></span></span>&nbsp;: Das Trennzeichen ist ein Leerzeichen.</li></ul>
-<div class="mw-translate-fuzzy">
 <p>Optionen zum Speichern (<b>Save</b>) oder &Ouml;ffnen (<b>Read</b>) von Tabellen mit unterschiedlichen Trennzeichen wie Tab, Komma, Semikolon, Leerzeichen<br>
 Tab(ulation) ist das Trennzeichen f&uuml;r FreeCADs Arbeitsbereich [Spreadsheet_Workbench/de|Spreadsheet]<br>
 Die Nummer dieser vier Trennzeichen wird f&uuml;r Hilfe berechnet, falls unbekannt<br>
@@ -338,9 +337,7 @@ Das KOMMA ist das alte Trennzeichen (01.16 und davor) des FCInfo-Makros<br>
 Aus Kompatibilit&auml;tsgr&uuml;nden mit FreeCAD-Spreadsheet und seit Version 01.17 ist TAB (Tabulation) standardm&auml;&szlig;ig das Trennzeichen.<br>
 Wenn eine alte Kalkulationstabelle umgewandelt werden soll: Diese in FCInfo &ouml;ffnen und mit aktivierter Option Tabulation speichern.<br>
 <i>(Die Variable <b>switch_setVisible_GBox_013_SpreadSheet_Creation</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden).</i>
-</p>
-</div>
-<p><span id="Sector_14:_Main_tools"></span>
+</p><p><span id="Sector_14:_Main_tools"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_14:_Hauptwerkzeuge">Abschnitt 14: Hauptwerkzeuge</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Main_00.png&amp;filetimestamp=20230901201457&amp;.html" class="mw-file-description" title="FCInfo Hauptwerkzeuge"><img alt="FCInfo Hauptwerkzeuge" src="../File/Macro_FCInfo_Main_00.png" decoding="async" width="466" height="180" class="mw-file-element" data-file-width="466" data-file-height="180"></a></span>
@@ -719,13 +716,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119004237
+Cached time: 20260119004444
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.214 seconds
-Real time usage: 0.309 seconds
-Preprocessor visited node count: 1542/1000000
+CPU time usage: 0.225 seconds
+Real time usage: 0.284 seconds
+Preprocessor visited node count: 1541/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -735,19 +732,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  106.307      1 -total
-  6.82%    7.249     44 Template:LineEdit
-  6.28%    6.674     10 Template:CheckBox
-  5.57%    5.925     10 Template:Code
-  5.34%    5.674      8 Template:RadioButton
-  5.01%    5.329      1 Template:Macro/de
-  4.98%    5.299      1 Template:Codeextralink
-  4.17%    4.431      4 Template:ComboBox
-  3.75%    3.982      5 Template:Clear
-  3.49%    3.708      1 Template:CodeDownload
+100.00%   80.098      1 -total
+  6.47%    5.180     10 Template:Code
+  5.53%    4.428     10 Template:CheckBox
+  5.30%    4.244      5 Template:SpinBox
+  4.92%    3.940     44 Template:LineEdit
+  4.88%    3.912      1 Template:Macro/de
+  4.18%    3.345      1 Template:Codeextralink
+  3.96%    3.170      8 Template:RadioButton
+  3.83%    3.067      3 Template:Incode
+  3.63%    2.909      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004237 and revision id 1740897. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004443 and revision id 1740899. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
