Updated page Macro FCInfo/de

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -552,11 +552,9 @@ Dies ist normal; die Z&auml;hlung von Arrays bzw. Listen in OpenCascade beginnt 
 </p><p><span id="Limitations"></span>
 </p>
 <h3><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h3>
-<div class="mw-translate-fuzzy">
 <p>Immer mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> verlassen. Wird das Programm verlassen, ohne die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> zu verwenden, bleibt das Programm im Speicher und l&auml;uft weiter, und die Anzeige bleibt im "Ausgabefenster". FreeCAD muss beendet werden, um es aus dem Speicher zu l&ouml;schen. <br>
 In der Tabelle sind nur die ersten 200 Elemente des Objekts sichtbar. Enth&auml;lt das Objekt mehr als 200 Elemente, wird ein Signal durch <b>(! +200)</b> angezeigt. Die vollst&auml;ndige Datenliste ist in der Datei sichtbar, die mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span> gespeichert wird. <br>
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Wenn das Fenstermakro nach der Ausf&uuml;hrung nicht sichtbar ist, siehe das untere Fenster:
 </p>
@@ -707,13 +705,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119005430
+Cached time: 20260119005507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.211 seconds
-Real time usage: 0.302 seconds
-Preprocessor visited node count: 1537/1000000
+CPU time usage: 0.185 seconds
+Real time usage: 0.246 seconds
+Preprocessor visited node count: 1536/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -723,19 +721,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.272      1 -total
-  7.18%    7.491     44 Template:LineEdit
-  6.04%    6.302     10 Template:CheckBox
-  5.18%    5.403      1 Template:Macro/de
-  4.39%    4.578      8 Template:RadioButton
-  3.96%    4.134     10 Template:Code
-  3.11%    3.245      1 Template:Caption
-  3.09%    3.227      1 Template:Codeextralink
-  2.96%    3.083      4 Template:ComboBox
-  2.84%    2.961     30 Template:False
+100.00%   77.116      1 -total
+  6.53%    5.039      8 Template:RadioButton
+  6.02%    4.646     44 Template:LineEdit
+  5.44%    4.198     10 Template:CheckBox
+  5.35%    4.128     10 Template:Code
+  4.29%    3.307      5 Template:SpinBox
+  3.98%    3.070      1 Template:Macro/de
+  3.70%    2.856      1 Template:Codeextralink
+  3.67%    2.831      3 Template:Incode
+  3.49%    2.695     30 Template:False
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005430 and revision id 1740907. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005507 and revision id 1740909. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
